Tutor profile done

--- a/app/src/main/res/layout/activity_expert_profile.xml
+++ b/app/src/main/res/layout/activity_expert_profile.xml
@@ -29,151 +29,275 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <ImageView
-                    android:id="@+id/splashLightbulb2"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_marginTop="12dp"
-                    app:layout_constraintEnd_toEndOf="@+id/splashTitle2"
-                    app:layout_constraintStart_toStartOf="@+id/splashTitle2"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/lightbulb" />
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/chatButton"
+                    android:layout_width="160dp"
+                    android:layout_height="60dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginBottom="16dp"
+                    android:backgroundTint="@color/colorPrimary"
+                    app:cardCornerRadius="10dp"
+                    app:cardElevation="5dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/divider9">
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <TextView
+                            android:id="@+id/textView2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/montserrat"
+                            android:text="Chat Now"
+                            android:textColor="@color/colorAccent"
+                            android:textSize="21sp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                </androidx.cardview.widget.CardView>
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/emailButton"
+                    android:layout_width="160dp"
+                    android:layout_height="0dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginTop="0dp"
+                    android:layout_marginBottom="0dp"
+                    android:backgroundTint="@color/colorPrimary"
+                    app:cardCornerRadius="10dp"
+                    app:cardElevation="5dp"
+                    app:layout_constraintBottom_toBottomOf="@id/chatButton"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@id/chatButton">
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <TextView
+                            android:id="@+id/emailButtonText"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/montserrat"
+                            android:text="Email"
+                            android:textColor="@color/colorAccent"
+                            android:textSize="21sp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                </androidx.cardview.widget.CardView>
 
                 <TextView
                     android:id="@+id/splashTitle2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="12dp"
+                    android:layout_marginStart="8dp"
                     android:fontFamily="@font/montserrat"
                     android:text="eduSoS"
                     android:textColor="@color/colorPrimary"
-                    android:textSize="36sp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/splashLightbulb2" />
+                    android:textSize="32sp"
+                    app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+                    app:layout_constraintStart_toEndOf="@+id/imageView2"
+                    app:layout_constraintTop_toTopOf="@+id/imageView2" />
 
                 <TextView
-                    android:id="@+id/cardview_title"
+                    android:id="@+id/expert_profile_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
                     android:layout_gravity="center_horizontal"
 
-                    android:layout_marginBottom="12dp"
+                    android:layout_marginEnd="16dp"
                     android:text="Expert Profile"
-                    android:textSize="22sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="@+id/splashTitle2"
-                    app:layout_constraintStart_toStartOf="@+id/splashTitle2"
-                    app:layout_constraintTop_toBottomOf="@+id/splashTitle2" />
+                    android:textSize="24sp"
+                    app:layout_constraintBottom_toBottomOf="@+id/splashTitle2"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/splashTitle2" />
 
                 <TextView
-                    android:id="@+id/cardview_name"
+                    android:id="@+id/expert_profile_name"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
                     android:layout_marginTop="16dp"
-                    android:layout_marginEnd="16dp"
                     android:fontFamily="@font/montserrat"
+                    android:gravity="center_vertical"
                     android:text="Name"
-                    android:textSize="25sp"
+                    android:textSize="30sp"
                     android:textStyle="bold"
-                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toBottomOf="@+id/profileImageContainer"
+                    app:layout_constraintEnd_toStartOf="@+id/profileImageContainer"
                     app:layout_constraintHorizontal_bias="0.49"
-                    app:layout_constraintStart_toEndOf="@+id/divider7"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <View
-                    android:id="@+id/divider7"
-                    android:layout_width="1dp"
-                    android:layout_height="0dp"
-                    android:layout_marginStart="12dp"
-                    android:background="?android:attr/listDivider"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/splashTitle2"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintStart_toStartOf="@+id/imageView2"
+                    app:layout_constraintTop_toBottomOf="@+id/divider7" />
 
                 <View
                     android:id="@+id/divider8"
                     android:layout_width="0dp"
                     android:layout_height="1dp"
+                    android:layout_marginTop="16dp"
                     android:background="?android:attr/listDivider"
-                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent" />
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/expert_profile_questionAnswered" />
 
                 <TextView
-                    android:id="@+id/cardview_ratePerQuestion"
+                    android:id="@+id/expert_profile_ratePerQuestion"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginEnd="2dp"
+                    android:layout_marginTop="16dp"
                     android:background="@drawable/green_rrect"
                     android:fontFamily="@font/montserrat"
-                    android:paddingLeft="7dp"
+                    android:paddingLeft="8dp"
                     android:paddingTop="1dp"
-                    android:paddingRight="7dp"
+                    android:paddingRight="8dp"
                     android:paddingBottom="3dp"
-                    android:text="$4.25"
+                    android:text="$ 4.25"
                     android:textColor="@color/colorAccent"
                     android:textSize="24sp"
-                    app:layout_constraintEnd_toStartOf="@+id/cardview_rating"
-                    app:layout_constraintHorizontal_bias="0.0"
-                    app:layout_constraintStart_toStartOf="@+id/cardview_name"
-                    app:layout_constraintTop_toBottomOf="@+id/cardview_name" />
+                    app:layout_constraintStart_toStartOf="@+id/expert_profile_name"
+                    app:layout_constraintTop_toBottomOf="@+id/profileImageContainer" />
 
                 <TextView
-                    android:id="@+id/cardview_rating"
+                    android:id="@+id/expert_profile_rating"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="12dp"
                     android:background="@drawable/gold_rrect"
                     android:drawableLeft="@drawable/ic_star_border_24px"
                     android:drawablePadding="2dp"
                     android:fontFamily="@font/montserrat"
-                    android:paddingStart="7dp"
+                    android:paddingStart="8dp"
                     android:paddingTop="1dp"
-                    android:paddingEnd="7dp"
+                    android:paddingEnd="8dp"
                     android:paddingBottom="3dp"
                     android:text="4.2 / 5"
                     android:textColor="@color/colorAccent"
                     android:textSize="24sp"
+                    app:layout_constraintEnd_toStartOf="@+id/expert_profile_questionAnswered"
+                    app:layout_constraintStart_toEndOf="@+id/expert_profile_ratePerQuestion"
+                    app:layout_constraintTop_toTopOf="@+id/expert_profile_ratePerQuestion" />
+
+                <com.google.android.material.chip.ChipGroup
+                    android:id="@+id/expert_profile_subjects"
+                    android:layout_width="0dp"
+                    android:layout_height="45dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/cardview_ratePerQuestion" />
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textView10" />
+
+                <TextView
+                    android:id="@+id/textView10"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="16dp"
+                    android:fontFamily="@font/montserrat"
+                    android:text="Subjects"
+                    android:textSize="24sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/divider8" />
+
+                <View
+                    android:id="@+id/divider9"
+                    android:layout_width="0dp"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="16dp"
+                    android:background="?android:attr/listDivider"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/expert_profile_subjects" />
+
+                <TextView
+                    android:id="@+id/expert_profile_questionAnswered"
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_marginEnd="16dp"
+                    android:background="@drawable/purple_rrect"
+                    android:fontFamily="@font/montserrat"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:text="13 Answers"
+                    android:textAlignment="center"
+                    android:textColor="@color/colorAccent"
+                    android:textSize="24sp"
+                    app:layout_constraintBottom_toBottomOf="@+id/expert_profile_rating"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/expert_profile_rating" />
+
+                <RelativeLayout
+                    android:id="@+id/profileImageContainer"
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="16dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/divider7">
+
+
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:id="@+id/profileImage"
+                        android:layout_width="96dp"
+                        android:layout_height="96dp"
+                        app:civ_border_color="#000"
+                        app:civ_border_width="2dp" />
+
+                    <ImageView
+                        android:id="@+id/onlineIndicator"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentBottom="true"
+                        android:layout_marginEnd="0dp"
+                        android:layout_marginBottom="0dp"
+                        app:srcCompat="@drawable/ic_online" />
+
+                </RelativeLayout>
+
+                <View
+                    android:id="@+id/divider7"
+                    android:layout_width="0dp"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="16dp"
+                    android:background="?android:attr/listDivider"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+
+                <View
+                    android:id="@+id/divider10"
+                    android:layout_width="1dp"
+                    android:layout_height="0dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:background="?android:attr/listDivider"
+                    app:layout_constraintBottom_toTopOf="@+id/divider7"
+                    app:layout_constraintEnd_toStartOf="@+id/expert_profile_title"
+                    app:layout_constraintStart_toEndOf="@+id/splashTitle2"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <ImageView
+                    android:id="@+id/imageView2"
+                    android:layout_width="40dp"
+                    android:layout_height="50dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="16dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@drawable/lightbulb" />
+
             </androidx.constraintlayout.widget.ConstraintLayout>
-
-            <TextView
-                android:id="@+id/cardview_online"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="10dp"
-                android:text="Currently online" />
-
-            <TextView
-                android:id="@+id/cardview_subjects"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="10dp"
-                android:text="Email" />
-
-            <TextView
-                android:id="@+id/cardview_questionAnswered"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="10dp"
-                android:text="Question answered" />
-
-            <TextView
-                android:id="@+id/cardview_subjects"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="10dp"
-                android:text="Subjects" />
-
-            <Button
-                android:id="@+id/chatWithExpertBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="chat now" />
 
         </LinearLayout>
 
