--- a/app/src/main/res/layout/activity_question_search_result.xml
+++ b/app/src/main/res/layout/activity_question_search_result.xml
@@ -15,7 +15,7 @@
         android:text="Click on a question to post an answer."/>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycleView"
+        android:id="@+id/questionSearchRecycleView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="5dp"
