--- a/app/src/main/res/layout/activity_register_student.xml
+++ b/app/src/main/res/layout/activity_register_student.xml
@@ -107,7 +107,7 @@
 
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/cardView2"
+            android:id="@+id/signUpStudentButton"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginStart="24dp"
