--- a/app/src/main/res/layout/activity_expert_search_result.xml
+++ b/app/src/main/res/layout/activity_expert_search_result.xml
@@ -8,7 +8,7 @@ android:layout_height="match_parent"
 tools:context=".ExpertSearchResultActivity">
 
     <androidx.recyclerview.widget.RecyclerView
-    android:id="@+id/recycleView"
+    android:id="@+id/expertSearchRecycleView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="5dp"
