--- a/app/src/main/res/layout/activity_register_expert.xml
+++ b/app/src/main/res/layout/activity_register_expert.xml
@@ -117,7 +117,7 @@
 
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/cardView2"
+            android:id="@+id/signUpExpertButton"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginStart="24dp"
