--- a/app/src/main/res/layout/expert_search_result_card_view.xml
+++ b/app/src/main/res/layout/expert_search_result_card_view.xml
@@ -14,19 +14,19 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/cardview_rating"
+            android:id="@+id/expert_result_rating"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="24dp"
             android:fontFamily="@font/montserrat"
             android:text="4.25 / 5"
             android:textSize="24sp"
-            app:layout_constraintBottom_toBottomOf="@+id/cardview_name"
+            app:layout_constraintBottom_toBottomOf="@+id/expert_result_name"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/cardview_name" />
+            app:layout_constraintTop_toTopOf="@+id/expert_result_name" />
 
         <TextView
-            android:id="@+id/cardview_name"
+            android:id="@+id/expert_result_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
@@ -42,7 +42,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/cardview_subjects"
+            android:id="@+id/expert_result_subjects"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
@@ -57,15 +57,15 @@
             app:layout_constraintTop_toBottomOf="@+id/divider5" />
 
         <TextView
-            android:id="@+id/cardview_ratePerQuestion"
+            android:id="@+id/expert_result_ratePerQuestion"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/montserrat"
             android:text="$4.23"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/cardview_rating"
-            app:layout_constraintStart_toStartOf="@+id/cardview_rating"
+            app:layout_constraintEnd_toEndOf="@+id/expert_result_rating"
+            app:layout_constraintStart_toStartOf="@+id/expert_result_rating"
             app:layout_constraintTop_toBottomOf="@+id/divider5" />
 
         <View
@@ -77,7 +77,7 @@
             android:layout_marginBottom="8dp"
             android:background="?android:attr/listDivider"
             app:layout_constraintBottom_toTopOf="@+id/divider5"
-            app:layout_constraintEnd_toStartOf="@+id/cardview_rating"
+            app:layout_constraintEnd_toStartOf="@+id/expert_result_rating"
             app:layout_constraintTop_toTopOf="parent" />
 
         <View
@@ -87,7 +87,7 @@
             android:layout_marginTop="8dp"
             android:background="?android:attr/listDivider"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cardview_name" />
+            app:layout_constraintTop_toBottomOf="@+id/expert_result_name" />
 
         <View
             android:id="@+id/divider6"
