Finished expert profile

--- a/app/src/main/res/layout/activity_expert_profile.xml
+++ b/app/src/main/res/layout/activity_expert_profile.xml
@@ -161,6 +161,7 @@
                     android:paddingTop="1dp"
                     android:paddingRight="8dp"
                     android:paddingBottom="3dp"
+                    android:scaleX="0.95"
                     android:text="$ 4.25"
                     android:textColor="@color/colorAccent"
                     android:textSize="24sp"
@@ -179,6 +180,7 @@
                     android:paddingTop="1dp"
                     android:paddingEnd="8dp"
                     android:paddingBottom="3dp"
+                    android:scaleX="0.95"
                     android:text="4.2 / 5"
                     android:textColor="@color/colorAccent"
                     android:textSize="24sp"
@@ -228,6 +230,7 @@
                     android:fontFamily="@font/montserrat"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
+                    android:scaleX="0.95"
                     android:text="13 Answers"
                     android:textAlignment="center"
                     android:textColor="@color/colorAccent"
