--- a/app/src/main/res/layout/question_search_result_card_view.xml
+++ b/app/src/main/res/layout/question_search_result_card_view.xml
@@ -16,10 +16,10 @@ android:layout_height="wrap_content">
             android:id="@+id/question_result_subject"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="4dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
-            android:padding="10dp"
+            android:fontFamily="@font/montserrat"
             android:text="Subject"
             android:textSize="25sp"
             android:textStyle="bold"
@@ -32,8 +32,9 @@ android:layout_height="wrap_content">
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:padding="10dp"
+            android:fontFamily="@font/montserrat"
             android:text="question"
+            android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="@+id/question_result_subject"
             app:layout_constraintStart_toStartOf="@+id/question_result_subject"
             app:layout_constraintTop_toBottomOf="@+id/divider11" />
@@ -44,8 +45,9 @@ android:layout_height="wrap_content">
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            android:padding="10dp"
+            android:fontFamily="@font/montserrat"
             android:text="answer"
+            android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/question_result_question"
             app:layout_constraintStart_toStartOf="@+id/question_result_question"
@@ -55,6 +57,7 @@ android:layout_height="wrap_content">
             android:id="@+id/divider11"
             android:layout_width="0dp"
             android:layout_height="1dp"
+            android:layout_marginTop="8dp"
             android:background="?android:attr/listDivider"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -68,14 +71,16 @@ android:layout_height="wrap_content">
             android:layout_marginEnd="1dp"
             android:background="?android:attr/listDivider"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/question_result_question"
+            app:layout_constraintStart_toStartOf="@+id/divider11"
             app:layout_constraintTop_toBottomOf="@+id/question_result_question" />
 
         <com.google.android.material.chip.ChipGroup
             android:id="@+id/question_list_chips"
             android:layout_width="0dp"
-            android:layout_height="45dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
             app:layout_constraintEnd_toEndOf="@+id/question_result_question"
             app:layout_constraintStart_toStartOf="@+id/divider12"
             app:layout_constraintTop_toBottomOf="@+id/divider12" />
@@ -84,6 +89,7 @@ android:layout_height="wrap_content">
             android:id="@+id/divider13"
             android:layout_width="0dp"
             android:layout_height="1dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:background="?android:attr/listDivider"
             app:layout_constraintEnd_toEndOf="parent"
