--- a/app/src/main/res/layout/activity_answer_question.xml
+++ b/app/src/main/res/layout/activity_answer_question.xml
@@ -2,109 +2,160 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:layout_margin="5dp"
+    android:orientation="vertical"
+    app:cardCornerRadius="5dp"
     app:cardElevation="5dp"
-    android:layout_height="wrap_content"
     tools:context=".AnswerQuestionActivity">
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/cardview_welcome1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text=""
-        android:textSize="25sp"
-        android:textStyle="bold"
-        android:padding="10dp"/>
-
-    <TextView
-        android:id="@+id/cardview_textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:layout_gravity="center_horizontal"
-        android:text="Please Answer the Question"
-        android:textSize="30sp"
-        app:layout_constraintEnd_toEndOf="parent"
-
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/cardview_subject1"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Subject"
-        android:textSize="25sp"
-        android:textStyle="bold"
-        android:padding="10dp"/>
-    <TextView
-        android:id="@+id/cardview_question1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:text="question"/>
-    <TextView
-        android:id="@+id/cardview_previous_answer1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:text="question"/>
-    <EditText
-        android:id="@+id/cardview_answer1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:text=""
-        android:hint="Answer"/>
+        android:layout_height="wrap_content">
 
+        <TextView
+            android:id="@+id/cardview_welcome1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:fontFamily="@font/montserrat"
+            android:text=""
+            android:textAlignment="center"
+            android:textSize="14sp"
+            android:textStyle="italic"
+            app:layout_constraintEnd_toEndOf="@+id/cardview_answer1"
+            app:layout_constraintStart_toStartOf="@+id/cardview_answer1"
+            app:layout_constraintTop_toBottomOf="@+id/cardview_answer1" />
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/ButtonLogIn"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="24dp"
-        android:layout_marginTop="24dp"
-        android:onClick="onSubmit"
-        android:backgroundTint="@color/colorPrimary"
-        app:cardCornerRadius="10dp"
-        app:cardElevation="5dp"
+        <TextView
+            android:id="@+id/cardview_subject1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="16dp"
+            android:fontFamily="@font/montserrat"
+            android:text="Subject"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-        app:layout_constraintTop_toBottomOf="@+id/cardview_answer1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        <TextView
+            android:id="@+id/cardview_question1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:fontFamily="@font/montserrat"
+            android:text="question"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="@+id/cardview_subject1"
+            app:layout_constraintStart_toStartOf="@+id/cardview_subject1"
+            app:layout_constraintTop_toBottomOf="@+id/divider14" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <TextView
+            android:id="@+id/cardview_previous_answer1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:fontFamily="@font/montserrat"
+            android:text="previous answer"
+            app:layout_constraintEnd_toEndOf="@+id/cardview_question1"
+            app:layout_constraintStart_toStartOf="@+id/cardview_question1"
+            app:layout_constraintTop_toBottomOf="@+id/divider15" />
+
+        <EditText
+            android:id="@+id/cardview_answer1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:hint="Your Answer"
+            android:padding="10dp"
+            android:text=""
+            app:layout_constraintEnd_toEndOf="@+id/answerQuestionButton"
+            app:layout_constraintStart_toStartOf="@+id/answerQuestionButton"
+            app:layout_constraintTop_toBottomOf="@+id/divider16" />
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/answerQuestionButton"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="60dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="24dp"
+            android:layout_marginBottom="16dp"
+            android:backgroundTint="@color/colorPrimary"
+            android:onClick="onSubmit"
 
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/montserrat"
-                android:text="Submit"
-                android:textColor="@color/colorAccent"
-                android:textSize="21sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                 />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.cardview.widget.CardView>
+            app:cardCornerRadius="10dp"
+            app:cardElevation="5dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/cardview_welcome1">
 
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-</LinearLayout>
-<View
-    android:layout_width="match_parent"
-    android:layout_height="1dp"
-    android:background="#000"/>
+                <TextView
+                    android:id="@+id/textView2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/montserrat"
+                    android:text="Submit"
+                    android:textColor="@color/colorAccent"
+                    android:textSize="21sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.cardview.widget.CardView>
+
+        <View
+            android:id="@+id/divider14"
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:layout_marginTop="8dp"
+            android:background="?android:attr/listDivider"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/cardview_subject1" />
+
+        <View
+            android:id="@+id/divider15"
+            android:layout_width="400dp"
+            android:layout_height="1dp"
+            android:layout_marginStart="1dp"
+            android:layout_marginTop="16dp"
+            android:background="?android:attr/listDivider"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/answer_question_chips" />
+
+        <com.google.android.material.chip.ChipGroup
+            android:id="@+id/answer_question_chips"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            app:layout_constraintEnd_toEndOf="@+id/cardview_question1"
+            app:layout_constraintStart_toStartOf="@+id/cardview_question1"
+            app:layout_constraintTop_toBottomOf="@+id/cardview_question1" />
+
+        <View
+            android:id="@+id/divider16"
+            android:layout_width="400dp"
+            android:layout_height="1dp"
+            android:layout_marginStart="1dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="1dp"
+            android:background="?android:attr/listDivider"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/cardview_previous_answer1" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 </androidx.cardview.widget.CardView>
