--- a/app/src/main/res/layout/expert_search_result_card_view.xml
+++ b/app/src/main/res/layout/expert_search_result_card_view.xml
@@ -29,7 +29,6 @@
             android:id="@+id/expert_result_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
             android:layout_marginTop="4dp"
             android:layout_marginEnd="16dp"
             android:padding="10dp"
@@ -38,7 +37,7 @@
             android:textStyle="bold"
             app:layout_constraintEnd_toStartOf="@+id/divider3"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/expert_results_online_indicator"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
@@ -100,6 +99,17 @@
             app:layout_constraintEnd_toEndOf="@+id/divider3"
             app:layout_constraintStart_toStartOf="@+id/divider3"
             app:layout_constraintTop_toBottomOf="@+id/divider5" />
+
+        <ImageView
+            android:id="@+id/expert_results_online_indicator"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginStart="12dp"
+            app:layout_constraintBottom_toBottomOf="@+id/expert_result_name"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.55"
+            app:srcCompat="@drawable/ic_online" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
