--- a/app/src/main/res/drawable/sender_msg_layout.xml
+++ b/app/src/main/res/drawable/sender_msg_layout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid android:color="#BBEC92"></solid>
+    <solid android:color="#689F38"></solid>
 
     <corners android:radius="15dp"></corners>
 
