--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,10 +47,43 @@
             app:layout_constraintEnd_toEndOf="parent" />
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/chatListBtn"
+            android:layout_width="200dp"
+            android:layout_height="45dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="24dp"
+            android:backgroundTint="@color/colorPrimary"
+            android:clickable="true"
+            card_view:cardCornerRadius="10dp"
+            card_view:cardElevation="5dp"
+            card_view:layout_constraintEnd_toEndOf="parent"
+            card_view:layout_constraintTop_toBottomOf="@id/ButtonLogIn">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/textView4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/montserrat"
+                    android:text="Chat List"
+                    android:textColor="@color/colorAccent"
+                    android:textSize="21sp"
+                    card_view:layout_constraintBottom_toBottomOf="parent"
+                    card_view:layout_constraintEnd_toEndOf="parent"
+                    card_view:layout_constraintStart_toStartOf="parent"
+                    card_view:layout_constraintTop_toTopOf="parent" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
             android:id="@+id/ButtonLogIn"
             android:layout_width="200dp"
-            android:layout_height="60dp"
-            android:layout_marginTop="420dp"
+            android:layout_height="45dp"
+            android:layout_marginTop="20dp"
             android:layout_marginEnd="24dp"
             android:backgroundTint="@color/colorPrimary"
             android:clickable="true"
@@ -87,19 +120,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="60dp"
             android:background="@drawable/ic_postquestion"
-            android:onClick="onPostClick"
             app:layout_constraintBottom_toTopOf="@+id/textView3"
             app:layout_constraintStart_toStartOf="parent" />
-
-        <Button
-            android:id="@+id/chatListBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/ic_postquestion"
-            app:layout_constraintBottom_toTopOf="@+id/splashLightbulb"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
 
 
         <ImageView
@@ -158,30 +180,6 @@
             app:layout_constraintEnd_toEndOf="@+id/chatButton"
             app:layout_constraintStart_toStartOf="@+id/chatButton" />
 
-
-        <TextView
-            android:id="@+id/textView7"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:fontFamily="@font/montserrat"
-            android:text="Log In"
-            android:textColor="@color/colorPrimary"
-
-            app:layout_constraintBottom_toBottomOf="@+id/textView3"
-            app:layout_constraintEnd_toStartOf="@+id/textView6"
-            app:layout_constraintStart_toEndOf="@id/textView3" />
-
-        <TextView
-            android:id="@+id/textView8"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/montserrat"
-            android:text="Chat List"
-            android:textColor="@color/colorPrimary"
-            app:layout_constraintBottom_toBottomOf="@+id/chatListBtn"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
 
         <androidx.cardview.widget.CardView
             android:id="@+id/searchCard"
