--- a/app/src/main/res/layout/per_msg_layout.xml
+++ b/app/src/main/res/layout/per_msg_layout.xml
@@ -8,24 +8,35 @@
         android:id="@+id/receiver_msg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
         android:background="@drawable/receiver_msg_layout"
+        android:fontFamily="@font/montserrat"
+        android:maxWidth="280dp"
+        android:paddingLeft="14dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
         android:text=""
-        android:padding="10dp"
         android:textSize="14sp"
-        android:textStyle="bold"
-        />
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/sender_msg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/receiver_msg"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="10dp"
-        android:layout_alignTop="@+id/receiver_msg"
+        android:layout_marginRight="10dp"
         android:background="@drawable/sender_msg_layout"
+        android:fontFamily="@font/montserrat"
+        android:maxWidth="280dp"
+        android:paddingLeft="14dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
         android:text=""
         android:textSize="14sp"
-        android:textStyle="bold"/>
+        android:textStyle="bold" />
 
 
 </RelativeLayout>
