--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -13,25 +13,28 @@
 
         <EditText
             android:id="@+id/input_msg"
-            android:layout_width="320dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="8dp"
             android:layout_marginBottom="16dp"
             android:fontFamily="@font/montserrat"
             android:hint="Type here"
             android:padding="15dp"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/send_msg_btn"
             app:layout_constraintStart_toStartOf="parent" />
 
         <ImageButton
             android:id="@+id/send_msg_btn"
             android:layout_width="60dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_marginEnd="16dp"
             android:backgroundTint="@color/colorPrimary"
             android:src="@drawable/ic_send_black_24dp"
             android:tint="@color/colorAccent"
             app:layout_constraintBottom_toBottomOf="@+id/input_msg"
-            app:layout_constraintStart_toEndOf="@+id/input_msg" />
+            app:layout_constraintEnd_toEndOf="parent" />
 
         <TextView
             android:id="@+id/chat_user_name"
