--- a/app/src/main/res/layout/per_msg_layout.xml
+++ b/app/src/main/res/layout/per_msg_layout.xml
@@ -9,12 +9,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="4dp"
         android:background="@drawable/receiver_msg_layout"
         android:fontFamily="@font/montserrat"
         android:maxWidth="280dp"
         android:paddingLeft="14dp"
         android:paddingTop="5dp"
+        android:paddingRight="14dp"
         android:paddingBottom="5dp"
         android:text=""
         android:textSize="14sp"
@@ -26,13 +27,14 @@
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/receiver_msg"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="4dp"
         android:layout_marginRight="10dp"
         android:background="@drawable/sender_msg_layout"
         android:fontFamily="@font/montserrat"
         android:maxWidth="280dp"
         android:paddingLeft="14dp"
         android:paddingTop="5dp"
+        android:paddingRight="14dp"
         android:paddingBottom="5dp"
         android:text=""
         android:textSize="14sp"
