--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,6 @@
     <color name="colorPrimary">#978CFC</color>
     <color name="colorPrimaryDark">#6D5DFF</color>
     <color name="colorAccent">#FFFFFF</color>
+    <color name="colorBlack">#000000</color>
 
 </resources>
