--- a/app/src/main/res/layout/activity_expert_search.xml
+++ b/app/src/main/res/layout/activity_expert_search.xml
@@ -34,7 +34,6 @@ tools:context=".ExpertSearchActivity">
         android:text="Search for An Expert"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/splashTitle" />
 
@@ -42,7 +41,7 @@ tools:context=".ExpertSearchActivity">
         android:id="@+id/splashLightbulb"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="60dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -56,23 +55,21 @@ tools:context=".ExpertSearchActivity">
 
         android:layout_marginTop="16dp"
         android:background="#b3b3ff"
-
         android:checked="false"
         android:fontFamily="@font/montserrat"
         android:onClick="onCheckboxClicked"
         android:text="Experts currently online    "
         android:textColor="@color/colorAccent"
         app:layout_constraintEnd_toEndOf="@+id/searchCard"
-        app:layout_constraintStart_toStartOf="@+id/searchCard"
         app:layout_constraintTop_toBottomOf="@+id/searchCard" />
 
 
     <androidx.cardview.widget.CardView
         android:id="@+id/searchCard"
-        android:layout_width="330dp"
-        android:layout_height="52dp"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
         android:background="@drawable/ic_search_box"
         app:cardCornerRadius="5dp"
@@ -82,25 +79,36 @@ tools:context=".ExpertSearchActivity">
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView">
 
-        <ImageButton
-            android:id="@+id/searchBoxButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="285dp"
-            android:layout_marginTop="10dp"
-            android:background="@android:color/transparent"
-            android:src="@drawable/ic_searchsymbol" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <EditText
-            android:id="@+id/searchBox"
-            android:layout_width="280dp"
-            android:layout_height="52dp"
-            android:layout_marginBottom="160dp"
-            android:background="@android:color/transparent"
-            android:ems="10"
-            android:hint="Enter a subject or keyword"
-            android:inputType="textPersonName"
-            android:paddingStart="15dp" />
+            <ImageButton
+                android:id="@+id/searchBoxButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
+                android:background="@android:color/transparent"
+                android:src="@drawable/ic_searchsymbol"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <EditText
+                android:id="@+id/searchBox"
+                android:layout_width="0dp"
+                android:layout_height="52dp"
+                android:layout_marginEnd="16dp"
+                android:background="@android:color/transparent"
+                android:ems="10"
+                android:hint="Enter a subject or keyword"
+                android:inputType="textPersonName"
+                android:paddingStart="15dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/searchBoxButton"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
 
