--- a/app/src/main/res/layout/activity_log_in_sign_up.xml
+++ b/app/src/main/res/layout/activity_log_in_sign_up.xml
@@ -45,7 +45,7 @@
             app:srcCompat="@drawable/lightbulb" />
 
         <TextView
-            android:id="@+id/splashTitle2"
+            android:id="@+id/expert_profile_splash"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/montserrat"
@@ -66,7 +66,7 @@
             android:textSize="30sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/splashTitle2" />
+            app:layout_constraintTop_toBottomOf="@+id/expert_profile_splash" />
 
 
         <androidx.cardview.widget.CardView
