--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,13 +15,14 @@
             android:id="@+id/splashTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="12dp"
             android:fontFamily="@font/montserrat"
             android:text="eduSoS"
             android:textColor="@color/colorPrimary"
             android:textSize="60sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/splashLightbulb" />
+            app:layout_constraintEnd_toEndOf="@+id/searchCard"
+            app:layout_constraintTop_toBottomOf="@+id/chatListBtn" />
 
         <TextView
             android:id="@+id/splashInfo"
@@ -130,18 +131,21 @@
             android:id="@+id/splashAccent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            app:layout_constraintBottom_toTopOf="@+id/splashTitle"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0"
             card_view:srcCompat="@drawable/ic_topleftdesign" />
 
         <ImageView
             android:id="@+id/splashLightbulb"
             android:layout_width="70dp"
             android:layout_height="70dp"
-            android:layout_marginTop="150dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginStart="12dp"
+            app:layout_constraintBottom_toBottomOf="@+id/splashTitle"
+            app:layout_constraintStart_toStartOf="@+id/searchCard"
+            app:layout_constraintTop_toTopOf="@+id/splashTitle"
+            app:layout_constraintVertical_bias="0.55"
             card_view:srcCompat="@drawable/lightbulb" />
 
 
@@ -196,6 +200,7 @@
                 android:hint="Search our answer forums"
                 android:inputType="textPersonName"
                 android:paddingStart="15dp"
+                android:textColorHighlight="@color/colorPrimary"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
